[gd_scene load_steps=26 format=3 uid="uid://lcbcgucybats"]

[ext_resource type="Script" uid="uid://3rbpbf8wti7e" path="res://assets/enemies/Heraldo/nieto.gd" id="1_h4qm0"]
[ext_resource type="Texture2D" uid="uid://dhwdhvclgim7q" path="res://assets/enemies/Heraldo/Slime_Spiked_Idle.png" id="1_t5t0n"]
[ext_resource type="PackedScene" uid="uid://bahwap0hmqigt" path="res://Escenarios/Cueva/mechero.tscn" id="2_88lm8"]
[ext_resource type="Texture2D" uid="uid://c0ynvnh8c6bls" path="res://assets/enemies/Heraldo/Slime_Spiked_Run.png" id="3_egjlu"]
[ext_resource type="Texture2D" uid="uid://cugvrycgf8w4h" path="res://assets/enemies/Heraldo/Slime_Spiked_Jump.png" id="3_rcw3t"]

[sub_resource type="AtlasTexture" id="AtlasTexture_wbru3"]
atlas = ExtResource("3_rcw3t")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1h5cv"]
atlas = ExtResource("3_rcw3t")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0pcpp"]
atlas = ExtResource("3_rcw3t")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1ebn"]
atlas = ExtResource("3_rcw3t")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2ii7"]
atlas = ExtResource("3_rcw3t")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3avi1"]
atlas = ExtResource("3_rcw3t")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8k7aq"]
atlas = ExtResource("3_rcw3t")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_key6d"]
atlas = ExtResource("3_rcw3t")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_egjlu"]
atlas = ExtResource("1_t5t0n")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_88lm8"]
atlas = ExtResource("1_t5t0n")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rcw3t"]
atlas = ExtResource("1_t5t0n")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2wjn8"]
atlas = ExtResource("1_t5t0n")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8lysy"]
atlas = ExtResource("3_egjlu")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x03ap"]
atlas = ExtResource("3_egjlu")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_632rx"]
atlas = ExtResource("3_egjlu")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j5u2j"]
atlas = ExtResource("3_egjlu")
region = Rect2(192, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_8lysy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wbru3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1h5cv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0pcpp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1ebn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2ii7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3avi1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8k7aq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_key6d")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_egjlu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_88lm8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rcw3t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2wjn8")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8lysy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x03ap")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_632rx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j5u2j")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_h4qm0"]
radius = 12.0416

[sub_resource type="CircleShape2D" id="CircleShape2D_egjlu"]
radius = 61.0328

[sub_resource type="CircleShape2D" id="CircleShape2D_88lm8"]
radius = 24.0832

[node name="Nieto" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 2
script = ExtResource("1_h4qm0")
mecheroEscena = ExtResource("2_88lm8")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_8lysy")
animation = &"attack"
frame = 5
frame_progress = 0.35729

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 9)
shape = SubResource("CircleShape2D_h4qm0")

[node name="detectionArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="detectionArea"]
position = Vector2(-1, 9)
shape = SubResource("CircleShape2D_egjlu")

[node name="enemyHitbox" type="Area2D" parent="." groups=["andres"]]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemyHitbox"]
position = Vector2(-1, 9)
shape = SubResource("CircleShape2D_88lm8")

[node name="damageCooldown" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="ataqueTimer" type="Timer" parent="."]

[connection signal="body_entered" from="detectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detectionArea" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="enemyHitbox" to="." method="_on_enemy_hitbox_body_entered"]
[connection signal="body_exited" from="enemyHitbox" to="." method="_on_enemy_hitbox_body_exited"]
[connection signal="timeout" from="damageCooldown" to="." method="_on_damage_cooldown_timeout"]
[connection signal="timeout" from="ataqueTimer" to="." method="_on_ataque_timer_timeout"]
